# phosphor

./: .gitignore  README.md  pyproject.toml
docs/: phosphor-readme.md  vfd-readme.md
docs/plans/: 2026-03-02-vfd-spectrum-analyzer-design.md  2026-03-02-vfd-spectrum-analyzer.md  design_proposal.md  implementation_plan.md
src/phosphor/: __main__.py  analyzer.py  capture.py  cli.py  config.py  renderer.py  ring_buffer.py  vfd_colors.py
src/phosphor/meters/: __init__.py  lufs.py  peak.py  rms.py  spectrum.py  vu.py
src/vfd/: __main__.py  analyzer.py  capture.py  cli.py  config.py  layouts.py  renderer.py  vfd_colors.py
src/vfd/meters/: lufs.py  peak.py  rms.py  spectrum.py  vu.py
tests/: test_analyzer.py  test_capture.py  test_config.py  test_config_generate.py  test_layouts.py  test_renderer.py  test_ring_buffer.py  test_vfd_colors.py
tests/meters/: test_lufs.py  test_peak.py  test_rms.py  test_spectrum.py  test_vu.py
