[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vfd"
version = "0.1.0"
description = "VFD Audio Spectrum Analyzer for macOS"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.21",
    "scipy>=1.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
vfd = "vfd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vfd"]
